--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
       <div class="col-3"></div>
     </div>
   </div>
+  <footer>
+    <a href="https://github.com/Anniesland/SCweather"> Open Source code</a>
+by Anniesland      
+  </footer>
 </body>
 <script src="script.js"></script>
 
