--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
     <hr />
     <div class="row">
-      <div class="col-2"></div>
+      <div class="col-2 rwm"></div>
       <div class="col-3">
         <h3>
           <em> Forecast </em>
